# bardow

./: .gitignore  README.md  main.py  pyproject.toml
bardow/backend/: backend.py  backendtypes.py  default.py  equation.py  unit.py  variable.py
bardow/backend/implementations/: stub.py  sympy.py
bardow/fundamentals/: valuetables.py
bardow/model/: errors.py  latex.py  state.py  systemofrelationships.py  table.py  unit.py  units.py  variable.py  variablerelationship.py
dunsupported/: __init__.py
dunsupported/dunsupported/: arithmetic.py  async.py  attributeaccess.py  bitwise.py  callability.py  collections.py  comparability.py  contextmanagement.py  descriptors.py  equality.py  hashability.py  lifetimemanagement.py  math.py  memoryview.py  metaprogramming.py  operation.py  orderability.py  stringformatting.py  typeconversions.py  unary.py
test/model/: test_errors.py  test_latex.py  test_state.py  test_systemofrelationships.py  test_table.py  test_variable.py  test_variablerelationship.py
