[tool.poetry]
name = "bardow"
version = "0.1.0"
description = ""
authors = ["LuNoX <maillunox@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sympy = "^1.12"
pandas = "^2.2.2"
coolprop = "^6.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

